Add 53 new diagrams: partial compute, tools, san coverage
Agents wrote new @kb_diagram functions before hitting token limits:
- tools.py: +39 pages (jira arch/ops/security/troubleshooting, confluence
  security/troubleshooting, servicenow partial, git partial)
- compute/other.py: +10 pages (linux architecture sub-pages)
- san.py: +4 pages (brocade fabric-os partial)

Remaining: san(83), tools(36), compute(32), cloud(194), storage(334),
virtualization(348) = 1027 pages still to fill.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>